mTLS/deployK8s/applicationA/ingress/ingressA.yml
#ingress with mTLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-a-ingress-mtls
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appA.example.com
      secretName: app-a-tls  # Secret containing server certificate and key
  rules:
    - http:
        paths:
          - path: /webhook
            backend:
              service:
                name: app-a-service
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-a-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appA.example.com
      secretName: app-a-tls  # Secret containing server certificate and key
  rules:
    - http:
        paths:
          - path: /v1/
            backend:
              service:
                name: app-a-service
                port:
                  number: 80
